err/redomino.protectdelete.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redomino'...
Listing './lib/python3.5/site-packages/redomino/protectdelete'...
Compiling './lib/python3.5/site-packages/redomino/protectdelete/handlers.py'...
***   File "./lib/python3.5/site-packages/redomino/protectdelete/handlers.py", line 46
    raise Redirect, view_url
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redomino/protectdelete/locales'...
Listing './lib/python3.5/site-packages/redomino/protectdelete/locales/en'...
Listing './lib/python3.5/site-packages/redomino/protectdelete/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/redomino/protectdelete/locales/it'...
Listing './lib/python3.5/site-packages/redomino/protectdelete/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/redomino/protectdelete/profiles'...
Listing './lib/python3.5/site-packages/redomino/protectdelete/profiles/default'...
Listing './lib/python3.5/site-packages/redomino.protectdelete-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
